2004-09-15  Gaurav Vaish <gaurav[dot]vaish[at]gmail[dot]com>

	* Part.cs                    : Completed
	* WebPart.cs                 : Initial implementation

2004-08-31  Sanjay Gupta <gsanjay@novell.com>

    	* ConnectionConsumerCallback.cs:
	* ConnectionProviderCallback.cs:
    	* IFilter.cs:
	* IParameters.cs:
	* IPersonalizable.cs:
    	* IVersioningPersonalizable.cs:
	* WebPartAuthorizationEventArgs.cs:
    	* WebPartAuthorizationEventHandler.cs:
    	* WebPartCancelEventHandler.cs:
	* WebPartConnectionsEventHandler.cs:
   	* WebPartDisplayModeCancelEventHandler.cs:
   	* WebPartDisplayModeEventHandler.cs:
	* WebPartEventHandler.cs:
    	* WebPartVerbsEventHandler.cs: Minor modifications, compiler error
		corrections and removal of "sealed" specifier from *EventHandler.cs
   	* WebPartDisplayMode.cs: Added new file.

2004-08-12  Sanjay Gupta <gsanjay@novell.com>

	* IField.cs:
	* IFilter.cs:
	* IParameters.cs:
	* IPersonalizable.cs:
	* IRow.cs:
	* ITable.cs:
	* ITrackingPersonalizable.cs:
	* ITransformerConfigurationControl.cs:
	* IVersioningPersonalizable.cs:
	* IWebActionable.cs:
	* IWebEditable.cs:
	* IWebPart.cs:
	* IWebPartHttpHandler.cs: Added new interfaces.

2004-08-12 Sanjay Gupta <gsanjay@novell.com>

	* ConnectionConsumerCallback.cs:
	* ConnectionProviderCallback.cs:
	* WebPartAuthorizationEventArgs.cs:
	* WebPartAuthorizationEventHandler.cs:
	* WebPartCancelEventArgs.cs:
	* WebPartCancelEventHandler.cs:
	* WebPartConnectionsEventArgs.cs:
	* WebPartConnectionsEventHandler.cs:
	* WebPartDisplayModeCancelEventArgs.cs:
	* WebPartDisplayModeCancelEventHandler.cs:
	* WebPartDisplayModeEventArgs.cs:
	* WebPartDisplayModeEventHandler.cs:
	* WebPartEventArgs.cs:
	* WebPartEventHandler.cs:
	* WebPartVerbsEventArgs.cs:
	* WebPartVerbsEventHandler.cs: Added new EventArgs and EventHandler.

2004-08-03 Sanjay Gupta <gsanjay@novell.com>

	* ConnectionPointType.cs : Implemented enumeration.
	* PartChromeState.cs : Implemented enumeration.